- New feature: All Crates Are Wumpa (Crash 1 & 2)
- New feature: Randomize Warp Room (Crash 2 & WARPED)
- New feature: Backwards Levels (Where possible: Crash 1 - Complete; Crash 2/WARPED - Beta state, not all levels)
- New feature: Random Levels Are Backwards
- New feature: Randomize Crate Contents
- New feature: Randomize Boss Levels (Crash 1 & 2) (Where possible)
- New feature: Randomize Flying Levels (Crash WARPED)
- New feature: Vehicle Levels On Foot (Crash 2)
- New feature: Wider Camera Field-Of-View
- New feature: Randomize Camera Field-Of-View
- New feature: Randomize World Colors
- New feature: Randomize World Palette
- New feature: Greyscale World (Crash 2 & WARPED)
- New feature: Untextured World (Crash 2 & WARPED)
- Crate Mod Loader info is now displayed ingame. (Crash 1 - Main menu, Crash 2/WARPED - Pause menu in the Warp Room)
- Added region detection for Mod Crates.

Crash Tag Team Racing: 
- Mod layer 1 now supports repacking of Movies.rcf files

Crash of the Titans, Crash Mind Over Mutant:
- Added support for the Xbox 360 version.  
  
1.1.0

General:
- Added support for Mod Crates (all games can replace base extracted files, supported games have more options and replacement layers), an example mod for Crash Twinsanity is included in the "Mods" folder.
- Added API links where available.
- Merged ROM checking into one option to prevent confusion.
- Added drag & drop support (ROMs and folders).
- Unsupported games now display differently than unknown ROMs.

New games supported:
- Rayman 3: Hoodlum Havoc
- Crash Team Racing

New mod layers:
- Crash Team Racing: BIGFILE.BIG contents
- Crash Nitro Kart: ASSETS.GOB contents
- Crash Twinsanity: CRASH.BD contents
- Crash Tag Team Racing: All .RCF file contents
- Crash of the Titans: Default.RCF contents
- Crash Mind Over Mutant: Default.RCF contents

Crash Twinsanity:
- Added support for the XBOX version.  
- Randomize Character Parameters: Now also randomizes health (masks) on spawn.  