@@ -469,6 +469,49 @@ namespace CrateModLoader.GameSpecific
             }
         }
 
+        public static void Rand_BoxCount(NSF nsf, Random rand)
+        {
+            List<Entity> willys = new List<Entity>();
+            foreach (Chunk chunk in nsf.Chunks)
+            {
+                if (chunk is EntryChunk entrychunk)
+                {
+                    foreach (Entry entry in entrychunk.Entries)
+                    {
+                        if (entry is ZoneEntry zone2)
+                        {
+                            foreach (Entity entity in zone2.Entities)
+                            {
+                                if (entity.Type == 0 && entity.Subtype == 0)
+                                {
+                                    willys.Add(entity);
+                                }
+                            }
+                        }
+                        if (entry is NewZoneEntry zone3)
+                        {
+                            foreach (Entity entity in zone3.Entities)
+                            {
+                                if (entity.Type == 0 && entity.Subtype == 0)
+                                {
+                                    willys.Add(entity);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            foreach (Entity willy in willys)
+            {
+                if (willy.BoxCount.HasValue)
+                {
+                    int boxcount = willy.BoxCount.Value.ValueB;
+                    boxcount = rand.Next(0, boxcount + 1);
+                    willy.BoxCount = new EntitySetting(0, boxcount);
+                }
+            }
+        }
+
 
     }
 }
